Register page alignment fix

--- a/Bank-Insuarance/wwwroot/css/AccountStyle.css
+++ b/Bank-Insuarance/wwwroot/css/AccountStyle.css
@@ -514,7 +514,7 @@ h1, h3 {
     margin-top: 1%;
 }
 
-.Name_label, .Profession_label, .NIC_label, .PasswordSecurity_label, .Email_label, .DOB_label, .Live_label,, .labelA {
+.Name_label, .Profession_label, .NIC_label, .PasswordSecurity_label, .Email_label, .DOB_label, .Live_label, .labelA {
     margin-top: 1%;
     margin-left: 2%;
 }
@@ -683,7 +683,7 @@ tr:hover {
     margin-bottom: 0%;
 }
 
-.Save, .SaveA, .Delete, .RoleDetails {
+.Save, .SaveA, .Delete, .RoleDetails{
     font-family: "Roboto Condensed";
     border-radius: 10px;
     width: 148px;
@@ -692,12 +692,14 @@ tr:hover {
     box-shadow: 0px 4px 8px rgba(255, 255, 255);
     background-color: #05415C;
     color: rgb(255, 255, 255);
+    cursor:pointer;
 }
 
 .SaveA, .Delete {
     width: 138px;
     height: 35px;
 }
+
 
 .Delete {
     background-color: #ff0000;
@@ -780,3 +782,4 @@ tr:hover {
 .copyrightPR {
     margin-top: 36%;
 }
+
